(chores) camel-cxf: code cleanup
- break large and complex methods
- use final when possible
- use Java-style array declaration
- use charset constants
- fix logging